Make NOSCRIPT show up normally when script disabled (bug 77296), r=bzbarsky@mit.edu, sr=dbaron@dbaron.org